--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -4,8 +4,6 @@
 # needed, as this file would be unique to each node.
 # YAML 1.2 compliant
 general:  # general eMews daemon options
-  # name of the node to act as the hub
-  hub: n1
   # Delay (seconds) to start services from eMews daemon invocation.
   service_start_delay: 120
   # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
@@ -16,6 +14,9 @@ general:  # general eMews daemon options
 communication:  # communication related eMews daemon options
   host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
   port: 32518      # port to use
+
+hub:
+  node_name: n1
 
 startup_services:
   # Any services which should start, for all nodes, should be placed here.  Most services will start
