--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -4,11 +4,16 @@
 # Init configuration skeleton.  Only used during system initialization.
 init:
   readonly: # These K/Vs cannot be overwritten in a config file
+    general:
+      node_name_length: 32  # max length of a node name (longer names are truncated)
     logging:
       logger_name: emews.base
       message_format: "[%(asctime)s] %(nodename)-12.12s | %(nodeid)-5.5s | %(threadName)-16.16s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s"
       stream: "sys.stdout" # stdout stream
   overrides: # These K/Vs can be overwritten in a config file
+    communication:
+      hub_broadcast_wait: 60  # max amount of time to wait for broadcast message from hub
+      hub_broadcast_max_attempts: 5  # max number of times to wait for hub broadcast
     general: # general eMews daemon options
       node_name: null # name of the node running this instance of eMews
     logging:
@@ -16,6 +21,7 @@ init:
 
 # System configuration skeleton.  This is the configuration structure after initialization.
 system:
+  readonly: {}
   overrides:
     communication: # communication related eMews daemon options
       host: 127.0.0.1 # host to bind to (should be localhost or 127.0.0.1, etc)
