- lots of fucking changes (fucking in a good way) - eMews daemon runs without crashing in hub mode, can connect to it via telnet, seems to work good - signal catching seems to work without hanging or delays. - started implementation of ServSpawner, which will handle service spwaning from the ServiceClient (no choice, this will work best with CORE).

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -18,6 +18,7 @@ init:
       node_name: null # name of the node running this instance of eMews
     logging:
       message_level: DEBUG # log messages of this level and above (default)
+      output: console  # console or file
 
 # System configuration skeleton.  This is the configuration structure after initialization.
 system:
