- eMews is fucking working yo! - CORE service classes now work without having to hard code eMews path. - lots of bug fixes and other stuff - tested with a 12 node network (LAN), AutoSSH works, hub broadcast works, auto node id assignment works :-D

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -24,6 +24,8 @@ init:
 system:
   readonly: {}
   overrides:
+    client:
+      service_launch_delay: -1 # Delay (seconds) to connect and send service launch request.
     communication: # communication related eMews daemon options
       port: 32518 # port to use
       connect_timeout: 5 # seconds to wait during connection attempts
