--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -5,17 +5,19 @@
 # YAML 1.2 compliant
 general:  # general eMews daemon options
   # Delay (seconds) to start services from eMews daemon invocation.
-  service_start_delay: 20
+  service_start_delay: 30
   # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
   thread_shutdown_wait: 3  # in seconds (-1 = disable)
   # If true, then halt eMews on service-originated exceptions
-  halt_on_service_exceptions: True
-
+  halt_on_service_exceptions: False
+client:
+  service_launch_delay: 20
 communication:  # communication related eMews daemon options
   port: 32518      # port to use
-
+logging:
+  output: file
 hub:
-  node_name: absolutefunk-Inspiron-13-737
+  node_name: n1
 
 startup_services:
   # Any services which should start, for all nodes, should be placed here.  Most services will start
