- distributed logging testing (are messages with lower message_levels than is set at a node still sent?  The answer is no! :-) :-) )

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -16,6 +16,7 @@ communication:  # communication related eMews daemon options
   port: 32518      # port to use
 logging:
   output: file
+  message_level: DEBUG
 hub:
   node_name: n1
 
