--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -5,22 +5,22 @@
 # YAML 1.2 compliant
 general:  # general eMews daemon options
   # Delay (seconds) to start the eMews daemon.  Useful in waiting for routing to setup.  Hub node ignores this.
-  system_start_delay: 60
+  system_start_delay: 30
   # Delay (seconds) to start services from eMews daemon invocation.
-  service_start_delay: 20
+  service_start_delay: 18
   # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
   thread_shutdown_wait: 3  # in seconds (-1 = disable)
   # If true, then halt eMews on service-originated exceptions
   halt_on_service_exceptions: False
 client:
-  service_launch_delay: 5  # should be higher than system_start_delay
+  service_launch_delay: 38  # should be higher than system_start_delay
 communication:  # communication related eMews daemon options
   port: 32518      # port to use
 logging:
-  output: console
+  output: file
   message_level: DEBUG
 hub:
-  node_name: absolutefunk-Inspiron-13-737
+  node_name: n1
   node_address: null  # hub node broadcast most likely will be dropped by routers
 
 startup_services:
