--- a/pyCORE/src/emews/services/sitecrawleragent/sitecrawleragent.yml
+++ b/pyCORE/src/emews/services/sitecrawleragent/sitecrawleragent.yml
@@ -19,17 +19,13 @@ parameters:  # service configuration
     parameters:
       upper_bound: null
       sigma: 5.0
-  link_sampler:  # sampler used to pick the next link in a crawl
-    component: samplers.TruncnormSampler
-    parameters:  # config applied directly to the helper
-      upper_bound: null
-      sigma: 7.0
-
   link_delay_sampler:  # sampler used to determine delay in crawling to next link
     component: samplers.UniformSampler
     parameters:
       lower_bound: 2  # lower bound (sec) - a_4
       upper_bound: 8  # upper bound (sec) - b_4
+
+  link_viral_odds: 0.2
 
 execution:
   loop: True  # restarts service after expected termination
