- Added random delay to ServiceLauncher (launch window after start delay) - Fixed bug in SiteCrawlerAgent in which prior debug log entry was incorrect (fixed bug and then commented out the log entry) - Commented out other log entries in SiteCrawlerAgent - Fixed bug in SiteCrawlerAgent in which IndexError would be thrown if page was crawled to that did not have a preferred link (ie, index of preferred link doesn't exist on the page, num_links < preferred link index)

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -26,6 +26,7 @@ system:
   overrides:
     client:
       service_launch_delay: -1 # Delay (seconds) to connect and send service launch request.  Should be higher than general-->system_start_delay.
+      service_launch_window: -1  # Upper bound to wait after service launch delay, [0, upper_bound], a delay sampled uniformly.  Helps to prevent service launch requests from flooding the hub.
     communication: # communication related eMews daemon options
       port: 32518 # port to use
       connect_timeout: 5 # seconds to wait during connection attempts
